Comtypes CHANGELOG
==================

Release 1.2.1
--------------
 * Replace ``distutils`` with ``setuptools``. By @junkmd.
 * Add Python 3.12 testing into CI pipeline. By @junkmd.
 * Set long description type to "markdown" to fix PyPI description rendering. By @junkmd.
 * Add ``hints.pyi`` to ``package_data`` in ``setup.py`` which copies ``hints.pyi`` to correct install location. By @junkmd.

Release 1.2.0
--------------
 * Remove all automatic imports of ``numpy``, and make ``numpy`` interop opt-in. By @bennyrowland.
 * Move and redefine generating module functions for fixing cross imports. By @junkmd.
 * Refactor creating ``__all__`` part in ``codegenerator.Generator.generate_code``. By @junkmd.
 * Quit calling ``GetModule`` from ``tools.codegenerator``. By @junkmd.
 * Commonize module-creating functions. By @junkmd.
 * Shorten the lifetime of ``io.StringIO`` used for code generation. By @junkmd.
 * Fix import source of ``Array`` from ``_ctypes`` to ``ctypes``. By @junkmd.
 * Add ``for_stub`` mode to ``ImportedNamespaces.getvalue``. By @junkmd.
 * Remove ``monkeypatch_COMError``. By @junkmd.
 * Remove ``CodeGenerator.need_GUID``. By @junkmd.
 * Carve out ``CodeGenerator.type_name`` method to ``TypeNamer`` class. By @junkmd.
 * Add ``__known_symbols__`` attributes. By @junkmd.
 * Remove ``CodeGenerator.type_name`` calls no longer needed and rename to ``_to_type_name``. By @junkmd.
 * Change ``_fix_inout_args`` to module-level top level function. By @junkmd.
 * Fix docstring from ``DispInterfaceHead``. By @junkmd.
 * ``...METHOD`` and ``...PROPERTY`` return ``_MemberSpec``s instead of ``tuple``s. By @junkmd.
 * Make generating ``...property`` DRY. By @junkmd.
 * Refactor ``_MemberSpec`` stuffs and separate modules. By @junkmd.
 * Carve out ``make_...Method`` and ``make_...Property`` of ``codegenerator``. By @junkmd.
 * Removed extra space in ``typeinfo.IRecordInfo._methods_``. By @j0ker70.
 * Add type annotations to many modules. By @junkmd.